--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "cytoscape-cola": "^2.5.1",
     "prettier": "^2.7.1",
     "vega": "^5.22.1",
-    "vega-lite": "^5.2.0"
+    "vega-lite": "5.6"
   }
 }
