--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "canvas": "^2.11.0",
     "cli-d3": "yinshanyang/cli-d3",
     "cytoscape": "^3.22.0",
     "cytoscape-cola": "^2.5.1",
