--- a/environment.yml
+++ b/environment.yml
@@ -34,5 +34,9 @@ dependencies:
   - firefox
   - nodejs=18.12.1
   - textdistance=4.5.0
+  - r-base=4.2.2
+  - r-styler=1.9.0
+  - r-formatr=1.14
+  - r-tidyverse=1.3.2
   - pip:
       - dash_dangerously_set_inner_html==0.0.2
