--- a/environment.yml
+++ b/environment.yml
@@ -34,6 +34,7 @@ dependencies:
   - firefox
   - nodejs=18.12.1
   - textdistance=4.5.0
+  - rapidfuzz=2.13.7
   - r-base=4.2.2
   - r-styler=1.9.0
   - r-formatr=1.14
