--- a/environment.yml
+++ b/environment.yml
@@ -39,5 +39,7 @@ dependencies:
   - r-styler=1.9.0
   - r-formatr=1.14
   - r-tidyverse=1.3.2
+  - vl-convert-python
   - pip:
       - dash_dangerously_set_inner_html==0.0.2
+      - altair==5.0.0rc1
