add observable plot support

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
-    "canvas": "^2.11.0",
+    "@observablehq/plot": "^0.6.6",
+    "canvas": "^2.11.2",
     "cli-d3": "yinshanyang/cli-d3",
+    "jsdom": "^21.1.1",
+    "node-html-to-image": "^3.3.0",
     "prettier": "^2.7.1",
+    "uglify-js": "^3.17.4",
     "vega": "^5.22.1",
     "vega-lite": "5.6"
   }
