--- a/environment.yml
+++ b/environment.yml
@@ -18,8 +18,10 @@ dependencies:
   - dash-extensions=0.1.6
   - tree_sitter=0.20.1
   - seaborn=0.12.2
-  - altair=4.2.2
-  - altair_saver=0.5.0
+  - altair=5.0.0
+  - holoviews=1.16.0
+  - hvplot=0.8.3
+  - panel=1.0
   - python-kaleido=0.2.1
   - spectra=0.0.11
   - lz4=4.2.0
@@ -27,7 +29,7 @@ dependencies:
   - statsmodels=0.13.5
   - black=22.10.0
   - jq=1.6
-  - bokeh=3.0.3
+  - bokeh=3.1.1
   - selenium=4.7.2
   - isort=5.12
   - geckodriver
@@ -42,4 +44,3 @@ dependencies:
   - vl-convert-python
   - pip:
       - dash_dangerously_set_inner_html==0.0.2
-      - altair==5.0.0rc1
