--- a/environment.yml
+++ b/environment.yml
@@ -34,6 +34,7 @@ dependencies:
   - geckodriver
   - firefox
   - nodejs=18.12.1
+  - yarn 3.6.0
   - textdistance=4.5.0
   - rapidfuzz=2.13.7
   - r-base=4.2.2
