--- a/build_files/fly.toml
+++ b/build_files/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml file generated for notascope on 2023-02-14T09:29:38-05:00
 
-app = "notascope"
+app = "notascopelatest"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
