--- a/environment.yml
+++ b/environment.yml
@@ -18,8 +18,7 @@ dependencies:
   - dash-extensions=0.1.6
   - tree_sitter=0.20.1
   - seaborn=0.12.2
-  - altair=4.2.2
-  - altair_saver=0.5.0
+  - altair=5.1.1
   - python-kaleido=0.2.1
   - spectra=0.0.11
   - lz4=4.2.0
@@ -39,7 +38,7 @@ dependencies:
   - r-styler=1.9.0
   - r-formatr=1.14
   - r-tidyverse=1.3.2
+  - r-reshape2=1.4.4
   - vl-convert-python
   - pip:
       - dash_dangerously_set_inner_html==0.0.2
-      - altair==5.0.0rc1
